ASCII arrows for navbar, since the triangle characters led to spacing issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -15,16 +15,14 @@ h2, h3{
   font-weight: 500;
 }
 
-p, p a, h4{
-  font-family: "STIX Two Math", sans-serif;
-}
-
 h4{
+  font-family: "STIX Two Math", sans-serif;
   font-weight: 400;
   font-size: 1.25em;
 }
 
-p{
+p, p a{
+  font-family: "STIX Two Math", sans-serif;
   font-size: 1.1em;
 }
 
