--- a/src/views/Resume.module.css
+++ b/src/views/Resume.module.css
@@ -1,3 +1,4 @@
 .linktext{
   margin: 10px;
+  font-size: 1em;
 }
